force-app/src/objects/EventApi__Event_Category__c.object
<CustomObject>
    <description>Event Categories store the default presets and calendar display options unique to a group of Events.</description>
    <fields>
        <fullName>EventApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Required Override ** Link to related Business Group. Derived from User Preferences if not defined on record creation.</description>
        <inlineHelpText>** System Calculated Required Override ** Link to related Business Group. Derived from User Preferences if not defined on record creation.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Event Categories</relationshipLabel>
        <relationshipName>Event_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Calendar_Reminder_Text__c</fullName>
        <description>Replaces Event: Description. When the customer clicks an &quot;Add to Calendar&quot; link on the event, this text is the body of the calendar item. By default, the Event Name, Start Time, End Time, and Venue information are included.</description>
        <inlineHelpText>Replaces Event: Description. When the customer clicks an &quot;Add to Calendar&quot; link on the event, this text is the body of the calendar item. By default, the Event Name, Start Time, End Time, and Venue information are included.</inlineHelpText>
        <label>Calendar Reminder Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Capacity__c</fullName>
        <description>Maximum number of tickets that can be sold for the event. Required if &quot;Enable Waitlist&quot; is checked.</description>
        <inlineHelpText>Maximum number of tickets that can be sold for the event. Required if &quot;Enable Waitlist&quot; is checked.</inlineHelpText>
        <label>Capacity / Ticket Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Description__c</fullName>
        <description>Optional description to display on pages that publish a calendar of Events related to the Event Category.</description>
        <inlineHelpText>Optional description to display on pages that publish a calendar of Events related to the Event Category.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Email_Notification_Text__c</fullName>
        <description>Replaces Event: Description. When attendees are registered by proxy, they receive an email notification about the event. This text is the body of that email. By default, the Event Name, Start Time, End Time, and Venue information are included.</description>
        <inlineHelpText>Replaces Event: Description. When attendees are registered by proxy, they receive an email notification about the event. This text is the body of that email. By default, the Event Name, Start Time, End Time, and Venue information are included.</inlineHelpText>
        <label>Email Notification Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this item.</description>
        <inlineHelpText>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this item.</inlineHelpText>
        <label>Enable Access Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Registration_Groups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, allows one person to register multiple attendees at the same time and pay for them together.</description>
        <inlineHelpText>When checked, allows one person to register multiple attendees at the same time and pay for them together.</inlineHelpText>
        <label>Enable Registration Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Schedule_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, enables schedule items for event Registration Styles that support them.</description>
        <inlineHelpText>When checked, enables schedule items for event Registration Styles that support them.</inlineHelpText>
        <label>Enable Schedule Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Sponsors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, enables sponsor package sales for event Registration Styles that support it.</description>
        <inlineHelpText>When checked, enables sponsor package sales for event Registration Styles that support it.</inlineHelpText>
        <label>Enable Sponsor Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Waitlist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, attendees will have the option to be added to a waitlist once tickets are sold out.</description>
        <inlineHelpText>When checked, attendees will have the option to be added to a waitlist once tickets are sold out.</inlineHelpText>
        <label>Enable Waitlisting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Media_Asset_Collection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link between the Event Category and the Media Asset Collection.</description>
        <inlineHelpText>Link between the Event Category and the Media Asset Collection.</inlineHelpText>
        <label>Media Asset Collection</label>
        <referenceTo>PagesApi__Media_Asset_Collection__c</referenceTo>
        <relationshipLabel>Media Collection</relationshipLabel>
        <relationshipName>Media_Asset_Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Instructions__c</fullName>
        <description>Text appears above ticket type selection on event registration page.</description>
        <inlineHelpText>Text appears above ticket type selection on event registration page.</inlineHelpText>
        <label>Registration Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Style__c</fullName>
        <description>Determines which page layouts are used to display the event, as well as the settings available for ticketing and/or registration.</description>
        <inlineHelpText>Determines which page layouts are used to display the event, as well as the settings available for ticketing and/or registration.</inlineHelpText>
        <label>Registration Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conference</fullName>
                    <default>true</default>
                    <label>Conference</label>
                </value>
                <value>
                    <fullName>Simple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneClick__Is_Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <label>Event Category</label>
    <listViews>
        <fullName>EventApi__All</fullName>
        <columns>NAME</columns>
        <columns>EventApi__Business_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Event Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>